# silero-vad-rv1106

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  toolchain-arm-rockchip830.cmake
docs/: evaluation.md
models/: silero_vad_6_2_encoder_rv1106_w8a8_v1.rknn
scripts/: convert_silero_vad_to_rknn.py  export_silero_vad_v6_2_onnx.py  make_vad_calibration_dataset.py  split_encoder.py
src/: rknn_api_minimal.h  rknn_vad.cpp
